# pymqi-embedded

./: .gitignore  .ruff.toml  CHANGELOG.md  LICENSE  LICENSE-THIRD-PARTY  README.md  pyproject.toml  setup.cfg  setup.py
scripts/: build_manylinux.sh  build_windows.ps1  repair_manylinux.sh  smoke_test.py  sync_upstream.py  sync_upstream.sh
src/pymqi/: __init__.py  _core.py  _loader.py  _pymqi.c  _version.py
tests/: conftest.py  test_import.py  test_smoke.py  test_version.py
