[build-system]
requires = ["setuptools>=63", "wheel", "poetry-core>=1.6.1"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "pymqi-embedded"
version = "1.13.1+embedded.2"
description = "Embedded distribution of PyMQI bundling the IBM MQ runtime libraries."
authors = ["Example Author <author@example.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "pymqi", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
ruff = "^0.1.0"
black = "^23.9"
mypy = "^1.6"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "--cov=pymqi --cov-report=term-missing"
