[metadata]
name = pymqi-embedded
version = 1.13.1+embedded.1
description = Embedded distribution of PyMQI bundling the IBM MQ runtime libraries.
long_description = file: README.md
long_description_content_type = text/markdown
license = Proprietary
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
packages = find:
package_dir =
    = src
include_package_data = true

[options.packages.find]
where = src

[tool:pytest]
addopts = --cov=pymqi --cov-report=term-missing
testpaths = tests

[mypy]
python_version = 3.9
ignore_missing_imports = true
